[metadata]
name = better_instagram
version = 0.0.1
author = oyas
author_email = third4572@gmail.com
description = For accessing info of both public and private instagram accounts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oyas4572/better_instagram
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True